@@ -1,2 +1,7 @@
 # gobela
 Gobela 21 with Grails 3
+
+
+run-app -Dgrails.env=test -Dgrails.reload.enabled=true
+
+-Xverify:none -noverify
